--- a/public/assets/scss/components/_react_plugin.scss
+++ b/public/assets/scss/components/_react_plugin.scss
@@ -977,6 +977,7 @@
 
       .fc-event-main {
         font-size: 13px;
+        color: #F6C89A !important;
       }
     }
   }
